# nftion

./: .prettierignore  README.md  package.json  thunder-test-off-chain.json
.github/workflows/: off-chain.yml  on-chain.yml  test.yml
ethereum/: .gitignore  package.json
marketplace-off-chain/: .prettierrc.yml  jest.config.js  junit.xml  package-lock.json  package.json  tsconfig.json
marketplace-off-chain/src/: app.ts  index.ts  server.ts
marketplace-off-chain/test/: route.test.ts
marketplace-off-chain/tests/: auction.test.ts  bidder.test.ts  route.test.ts  seller.test.ts
marketplace-on-chain/: .prettierignore  package-lock.json  package.json
marketplace-on-chain/contracts/: ERC20.sol  ERC721.sol  Lock.sol  Matcher.sol
off-chain/: .gitignore  .pylintrc  pyproject.toml  requirements.txt
on-chain/: hardhat.config.ts  package.json
python/: .pylintrc  README.md  pyproject.toml
python/auction/: main.py
python/nftion/: main.py
python/nftion/api/auction/: all_auctions.py  closed_auctions.py  nft_auction.py  open_auctions.py
python/nftion/api/home/: hello.py
python/nftion/database/: db.py
python/nftion/models/: auction.py  bid.py
python/nftion/validation/: __init__.py  auction.py  bidder.py
python/tests/behave/features/: auction.feature  bidder.feature
python/tests/behave/features/steps/: auction.py  bidder.py
python/tests/features/: auction.feature  bidder.feature  environment.py  seller.feature  start.feature
python/tests/features/steps/: auction.py  bidder.py  seller.py  start.py
src/: app.ts
test/: route.test.ts
(+56 files in other folders)
