[tool.poetry]
name = "auction"
version = "0.1.0"
description = ""
authors = ["Lucas Oliveira <olivmath@protonmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
behave = "^1.2.6"
pylint = "^2.15.3"
requests = "^2.28.1"
eth-ape = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
